--- a/index.html
+++ b/index.html
@@ -4,82 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ice Social Updates</title>
-    <style>
-      body {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between; /* Changed to space elements between */
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(45deg, #ff6b6b, #f7d794);
-        background-size: 400% 400%;
-        animation: gradientAnimation 10s ease infinite;
-      }
-
-      @keyframes gradientAnimation {
-        0% {
-          background-position: 0% 0%;
-        }
-        50% {
-          background-position: 100% 100%;
-        }
-        100% {
-          background-position: 0% 0%;
-        }
-      }
-
-      .container {
-        text-align: center;
-        color: #333;
-        margin-top: 20px; /* Added to give space above content */
-      }
-
-      .ice-cube {
-        font-size: 100px;
-        animation: pulse 1.5s infinite; /* Changed to pulse animation */
-      }
-
-      @keyframes pulse {
-        0% {
-          transform: scale(1); /* Original size */
-        }
-        50% {
-          transform: scale(1.1); /* Slightly larger */
-        }
-        100% {
-          transform: scale(1); /* Back to original size */
-        }
-      }
-
-      .message {
-        margin-top: 20px;
-        font-size: 18px;
-      }
-
-      .button {
-        padding: 10px 20px;
-        font-size: 16px;
-        color: white;
-        background-color: rgb(0, 0, 0);
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        text-decoration: none; /* Remove underline from link */
-        margin-bottom: 20px; /* Added margin for spacing from bottom */
-      }
-
-      .button:hover {
-        background-color: #5b5b5b; /* Darker on hover */
-      }
-    </style>
   </head>
-  <body>
-    <div class="container">
-      <div class="ice-cube">🧊</div>
-      <div class="message">v1: Released Ice Social Once Again on IceSocial.net</div>
+  <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; height: 100vh; margin: 0; font-family: Arial, sans-serif; background: linear-gradient(45deg, #ff6b6b, #f7d794);">
+    <div class="container" style="text-align: center; color: #333;">
+      <div class="ice-cube" style="font-size: 100px; animation: pulse 1.5s infinite;">
+        🧊
+      </div>
+      <div class="message" style="margin-top: 20px; font-size: 18px;">
+        v1: Released Ice Social Once Again on IceSocial.net
+      </div>
+      <!-- Reduced number of line breaks to move the button up -->
+      <br><br>
+      <a href="https://icesocial.net" class="button" style="padding: 10px 20px; font-size: 16px; color: white; background-color: rgb(0, 0, 0); border: none; border-radius: 5px; cursor: pointer; text-decoration: none;">Check Out Ice Social</a>
     </div>
-    <a href="https://icesocial.net" class="button">Check Out Ice Social</a> <!-- Button is now at the bottom -->
   </body>
 </html>
